// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiActionButton when rendered should match the snapshot 1`] = `
.c5 {
  display: inline-block;
  position: relative;
  color: #26A826;
  background-color: transparent;
}

.c5:hover {
  color: #1E861E;
  background-color: transparent;
}

.c5::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 16px;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c3:focus {
  outline: solid 3px #FFB500;
}

.c3:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c3:hover .c4 {
  color: #FFFFFF;
}

.c3 .c4 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c3 .c4 svg {
  margin-top: 0;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1 > .c2 {
  margin: 0;
}

.c1 > .c2:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c0 .c6 {
  min-width: 100%;
  white-space: nowrap;
  left: 0;
  right: auto;
  z-index: 12;
}

.c0 .c4 {
  margin-right: 0px;
  top: 2px;
  left: 8px;
}

<div
  className="c0"
  size="medium"
>
  <div
    aria-haspopup="true"
    className="c1"
    data-component="multi-action-button"
    onMouseLeave={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Show more"
      className="c2 c3"
      data-component="button"
      data-element="toggle-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
      role="button"
      size="medium"
      type="button"
    >
      <span>
        <span
          data-element="main-text"
        >
          Test
          <span
            className="c4 c5"
            data-component="icon"
            data-element="dropdown"
            disabled={false}
            fontSize="small"
            type="dropdown"
          />
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`MultiActionButton when rendered with "classic" theme should match the snapshot 1`] = `
.c6 {
  display: inline-block;
  position: relative;
  color: #00805D;
  background-color: transparent;
  color: rgba(0,0,0,0.85);
  background-color: transparent;
}

.c6:hover {
  color: #00664A;
  background-color: transparent;
}

.c6::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.common-input__label--help .c6 {
  width: auto;
  height: auto;
}

.c6:hover {
  color: rgba(0,0,0,0.90);
  background-color: transparent;
}

.c6::before {
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
}

.c7:hover .c5 {
  color: #FFFFFF;
}

.c7 .c5 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c7 .c5 svg {
  margin-top: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c4 .c5 {
  color: #255bc7;
}

.c4:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c4:active .c5 {
  color: #255bc7;
}

.c4:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4:hover .c5 {
  color: #ffffff;
}

.c4:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4:focus .c5 {
  color: #ffffff;
}

.c4:last-child {
  margin-right: 0;
}

.c4 .c5 {
  margin-left: 0px;
  margin-right: 8px;
  height: 18px;
}

.c4 .c5 svg {
  margin-top: 0;
}

.c8 > .c3 {
  margin: 0;
}

.c8 > .c3:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c2 {
  display: inline-block;
  position: relative;
}

.c2 > .c3 {
  margin: 0;
}

.c2 > .c3:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c2 > .c3:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c9 .c3 {
  background-color: #006300;
  border: 1px solid #006300;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c9 .c3:focus,
.c9 .c3:hover {
  background-color: #004400;
}

.c9 .c3 + .c13 .c3 {
  margin-top: 3px;
}

.c10 .c5 {
  margin-right: 0px;
  top: 2px;
  left: 8px;
}

.c11 .c1 > .c3 {
  background-color: #006300;
  border-color: #006300;
}

.c11 .c1 > .c3,
.c11 .c1 > .c3 .c5 {
  color: #FFFFFF;
  margin-right: 0;
  top: 2px;
  left: 8px;
}

.c11 .c1 > .c3:focus {
  border-color: #FFB500;
  margin: 0 -1px;
}

.c11 .c5 {
  margin-right: 0px;
  top: 2px;
  left: 8px;
}

.c12 .c13 .c3 {
  text-align: right;
}

.c12 .c5 {
  margin-right: 0px;
  top: 2px;
  left: 8px;
}

.c0 .c13 {
  min-width: 100%;
  white-space: nowrap;
  left: 0;
  right: auto;
  z-index: 12;
}

.c0 .c5 {
  margin-right: 0px;
  top: 2px;
  left: 6px;
}

.c0 .c1 > .c3,
.c0 .c1 > .c3:focus {
  margin: 0;
  height: 31px;
  padding: 6px 14px 7px 18px;
}

.c0 .c1 > .c3:focus {
  border-color: #1e499f;
}

.c0 .c13 {
  max-width: none;
  width: auto;
  padding-top: 5px;
  top: 29px;
  z-index: 12;
}

.c0 .c13 .c3 {
  border: none;
  border-radius: 0;
  color: #fff;
  display: block;
  margin-left: 0;
  min-width: 100%;
  padding-bottom: 5px;
  padding-top: 5px;
}

.c0 .c13 .c3:hover {
  background-color: #163777;
}

<div
  className="c0"
  size="medium"
>
  <div
    aria-haspopup="true"
    className="c1 c2"
    data-component="multi-action-button"
    onMouseLeave={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Show more"
      className="c3 c4"
      data-component="button"
      data-element="toggle-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
      role="button"
      size="medium"
      type="button"
    >
      <span>
        <span
          data-element="main-text"
        >
          Test
          <span
            className="c5 c6"
            data-component="icon"
            data-element="dropdown"
            disabled={false}
            fontSize="small"
            type="dropdown"
          />
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`StyledMultiActionButton when rendered with "classic" theme should match the snapshot for the legacy transparent type 1`] = `
.c0 .c4 {
  min-width: 100%;
  white-space: nowrap;
  left: 0;
  right: auto;
  z-index: 12;
}

.c0 .c1 {
  margin-right: 0px;
  top: 2px;
  left: 6px;
}

.c0 .c3 > .c2,
.c0 .c3 > .c2:focus {
  margin: 0;
  height: 31px;
  padding: 6px 14px 7px 18px;
}

.c0 .c3 > .c2:focus {
  border-color: #1e499f;
}

.c0 .c4 {
  max-width: none;
  width: auto;
  padding-top: 5px;
  top: 29px;
  z-index: 12;
}

.c0 .c4 .c2 {
  border: none;
  border-radius: 0;
  color: #fff;
  display: block;
  margin-left: 0;
  min-width: 100%;
  padding-bottom: 5px;
  padding-top: 5px;
}

.c0 .c4 .c2:hover {
  background-color: #163777;
}

.c0 .c3 > .c2 {
  background-color: transparent;
  box-shadow: none;
  border: 1px solid transparent;
  color: #335c6d;
}

.c0 .c3 > .c2:hover,
.c0 .c3 > .c2:active,
.c0 .c3 > .c2:focus {
  background-color: transparent;
  box-shadow: none;
  border-color: transparent;
  color: #335c6d;
}

.c0 .c3 > .c2 .c1 {
  color: #335c6d;
}

.c0 .c4 {
  background-color: #FFF;
  box-shadow: 0 3px 10px 0 rgba(0,0,0,0.2);
}

.c0 .c4 .c2 {
  color: #335c6d;
  background: #FFF;
}

.c0 .c4 .c2:focus {
  background-color: #FFF;
  color: #335c6d;
  box-shadow: none;
  outline: 0;
}

.c0 .c4 .c2:hover,
.c0 .c4 .c2:active {
  background-color: #e6ebed;
  color: #4782F7;
}

<div
  className="c0"
  size="medium"
/>
`;
